Fixing select vs. hover overlap effect in the top nav.

--- a/src/components/top-nav/TopNav.css
+++ b/src/components/top-nav/TopNav.css
@@ -115,6 +115,7 @@
 .navButtons a:after {
   background: none repeat scroll 0 0 transparent;
   bottom: 0;
+  bottom: -2px;
   content: "";
   display: block;
   height: 3px;
